fixed an issue with the courses jumbotron being too short

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -177,7 +177,7 @@
 }
 
 .courses-launcher{
-	height:400px;
+	height:450px;
 	margin-right: 5%;
 	text-align:center;
 	padding-top:0px;
